--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.4.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
