--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.3",
